demos/devdocs/0.68.1/nvdocument/type-aliases/NVConfigOptions.md
# Type Alias: NVConfigOptions

```ts
type NVConfigOptions = object;
```

Defined in: [nvdocument.ts:106](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L106)

NVConfigOptions

## Properties

### atlasActiveIndex

```ts
atlasActiveIndex: number;
```

Defined in: [nvdocument.ts:137](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L137)

---

### atlasOutline

```ts
atlasOutline: number;
```

Defined in: [nvdocument.ts:136](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L136)

---

### backColor

```ts
backColor: number[];
```

Defined in: [nvdocument.ts:119](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L119)

---

### bounds

```ts
bounds: [
  [number, number],
  [number, number],
] | null;
```

Defined in: [nvdocument.ts:213](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L213)

---

### boundsBorderColor?

```ts
optional boundsBorderColor: number[];
```

Defined in: [nvdocument.ts:215](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L215)

---

### centerMosaic

```ts
centerMosaic: boolean;
```

Defined in: [nvdocument.ts:186](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L186)

---

### clickToSegment

```ts
clickToSegment: boolean;
```

Defined in: [nvdocument.ts:189](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L189)

---

### clickToSegmentAutoIntensity

```ts
clickToSegmentAutoIntensity: boolean;
```

Defined in: [nvdocument.ts:192](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L192)

---

### clickToSegmentBright

```ts
clickToSegmentBright: boolean;
```

Defined in: [nvdocument.ts:191](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L191)

---

### clickToSegmentIntensityMax

```ts
clickToSegmentIntensityMax: number;
```

Defined in: [nvdocument.ts:193](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L193)

---

### clickToSegmentIntensityMin

```ts
clickToSegmentIntensityMin: number;
```

Defined in: [nvdocument.ts:194](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L194)

---

### clickToSegmentIs2D

```ts
clickToSegmentIs2D: boolean;
```

Defined in: [nvdocument.ts:197](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L197)

---

### clickToSegmentMaxDistanceMM

```ts
clickToSegmentMaxDistanceMM: number;
```

Defined in: [nvdocument.ts:196](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L196)

---

### clickToSegmentPercent

```ts
clickToSegmentPercent: number;
```

Defined in: [nvdocument.ts:195](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L195)

---

### clickToSegmentRadius

```ts
clickToSegmentRadius: number;
```

Defined in: [nvdocument.ts:190](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L190)

---

### clipPlaneColor

```ts
clipPlaneColor: number[];
```

Defined in: [nvdocument.ts:123](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L123)

---

### clipPlaneHotKey

```ts
clipPlaneHotKey: string;
```

Defined in: [nvdocument.ts:129](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L129)

---

### colorbarHeight

```ts
colorbarHeight: number;
```

Defined in: [nvdocument.ts:111](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L111)

---

### colorbarMargin

```ts
colorbarMargin: number;
```

Defined in: [nvdocument.ts:127](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L127)

---

### colorbarWidth

```ts
colorbarWidth: number;
```

Defined in: [nvdocument.ts:112](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L112)

---

### crosshairColor

```ts
crosshairColor: number[];
```

Defined in: [nvdocument.ts:120](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L120)

---

### crosshairGap

```ts
crosshairGap: number;
```

Defined in: [nvdocument.ts:116](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L116)

---

### crosshairWidth

```ts
crosshairWidth: number;
```

Defined in: [nvdocument.ts:114](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L114)

---

### crosshairWidthUnit

```ts
crosshairWidthUnit: "voxels" | "mm" | "percent";
```

Defined in: [nvdocument.ts:115](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L115)

---

### cycleClipPlaneHotKey

```ts
cycleClipPlaneHotKey: string;
```

Defined in: [nvdocument.ts:130](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L130)

---

### doubleTouchTimeout

```ts
doubleTouchTimeout: number;
```

Defined in: [nvdocument.ts:132](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L132)

---

### dragAndDropEnabled

```ts
dragAndDropEnabled: boolean;
```

Defined in: [nvdocument.ts:166](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L166)

---

### dragMode

```ts
dragMode: DRAG_MODE;
```

Defined in: [nvdocument.ts:148](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L148)

---

### dragModePrimary

```ts
dragModePrimary: DRAG_MODE;
```

Defined in: [nvdocument.ts:149](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L149)

---

### drawingEnabled

```ts
drawingEnabled: boolean;
```

Defined in: [nvdocument.ts:167](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L167)

---

### floodFillNeighbors

```ts
floodFillNeighbors: number;
```

Defined in: [nvdocument.ts:170](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L170)

---

### fontColor

```ts
fontColor: Float32List;
```

Defined in: [nvdocument.ts:121](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L121)

---

### fontMinPx

```ts
fontMinPx: number;
```

Defined in: [nvdocument.ts:110](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L110)

---

### fontSizeScaling

```ts
fontSizeScaling: number;
```

Defined in: [nvdocument.ts:109](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L109)

---

### forceDevicePixelRatio

```ts
forceDevicePixelRatio: number;
```

Defined in: [nvdocument.ts:162](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L162)

---

### gradientAmount

```ts
gradientAmount: number;
```

Defined in: [nvdocument.ts:210](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L210)

---

### gradientOpacity

```ts
gradientOpacity: number;
```

Defined in: [nvdocument.ts:208](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L208)

---

### gradientOrder

```ts
gradientOrder: number;
```

Defined in: [nvdocument.ts:207](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L207)

---

### heroImageFraction

```ts
heroImageFraction: number;
```

Defined in: [nvdocument.ts:157](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L157)

---

### heroSliceType

```ts
heroSliceType: SLICE_TYPE;
```

Defined in: [nvdocument.ts:158](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L158)

---

### interactive

```ts
interactive: boolean;
```

Defined in: [nvdocument.ts:187](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L187)

---

### invertScrollDirection

```ts
invertScrollDirection: boolean;
```

Defined in: [nvdocument.ts:211](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L211)

---

### is2DSliceShader

```ts
is2DSliceShader: boolean;
```

Defined in: [nvdocument.ts:212](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L212)

---

### isAdditiveBlend

```ts
isAdditiveBlend: boolean;
```

Defined in: [nvdocument.ts:176](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L176)

---

### isAlphaClipDark

```ts
isAlphaClipDark: boolean;
```

Defined in: [nvdocument.ts:206](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L206)

---

### isAntiAlias

```ts
isAntiAlias: boolean | null;
```

Defined in: [nvdocument.ts:175](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L175)

---

### isClipPlanesCutaway

```ts
isClipPlanesCutaway: boolean;
```

Defined in: [nvdocument.ts:124](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L124)

---

### isColorbar

```ts
isColorbar: boolean;
```

Defined in: [nvdocument.ts:139](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L139)

---

### isCornerOrientationText

```ts
isCornerOrientationText: boolean;
```

Defined in: [nvdocument.ts:154](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L154)

---

### isDepthPickMesh

```ts
isDepthPickMesh: boolean;
```

Defined in: [nvdocument.ts:153](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L153)

---

### isFilledPen

```ts
isFilledPen: boolean;
```

Defined in: [nvdocument.ts:171](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L171)

---

### isForceMouseClickToVoxelCenters

```ts
isForceMouseClickToVoxelCenters: boolean;
```

Defined in: [nvdocument.ts:165](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L165)

---

### isNearestInterpolation

```ts
isNearestInterpolation: boolean;
```

Defined in: [nvdocument.ts:135](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L135)

---

### isOrientationTextVisible

```ts
isOrientationTextVisible: boolean;
```

Defined in: [nvdocument.ts:155](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L155)

---

### isOrientCube

```ts
isOrientCube: boolean;
```

Defined in: [nvdocument.ts:140](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L140)

---

### isRadiologicalConvention

```ts
isRadiologicalConvention: boolean;
```

Defined in: [nvdocument.ts:146](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L146)

---

### isResizeCanvas

```ts
isResizeCanvas: boolean;
```

Defined in: [nvdocument.ts:177](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L177)

---

### isRuler

```ts
isRuler: boolean;
```

Defined in: [nvdocument.ts:138](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L138)

---

### isSliceMM

```ts
isSliceMM: boolean;
```

Defined in: [nvdocument.ts:160](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L160)

---

### isV1SliceShader

```ts
isV1SliceShader: boolean;
```

Defined in: [nvdocument.ts:161](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L161)

---

### keyDebounceTime

```ts
keyDebounceTime: number;
```

Defined in: [nvdocument.ts:134](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L134)

---

### legendBackgroundColor

```ts
legendBackgroundColor: number[];
```

Defined in: [nvdocument.ts:181](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L181)

---

### legendTextColor

```ts
legendTextColor: number[];
```

Defined in: [nvdocument.ts:182](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L182)

---

### limitFrames4D

```ts
limitFrames4D: number;
```

Defined in: [nvdocument.ts:179](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L179)

---

### loadingText

```ts
loadingText: string;
```

Defined in: [nvdocument.ts:164](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L164)

---

### logLevel

```ts
logLevel: "debug" | "info" | "warn" | "error" | "fatal" | "silent";
```

Defined in: [nvdocument.ts:163](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L163)

---

### longTouchTimeout

```ts
longTouchTimeout: number;
```

Defined in: [nvdocument.ts:133](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L133)

---

### maxDrawUndoBitmaps

```ts
maxDrawUndoBitmaps: number;
```

Defined in: [nvdocument.ts:173](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L173)

---

### measureLineColor

```ts
measureLineColor: number[];
```

Defined in: [nvdocument.ts:204](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L204)

---

### measureTextColor

```ts
measureTextColor: number[];
```

Defined in: [nvdocument.ts:203](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L203)

---

### measureTextHeight

```ts
measureTextHeight: number;
```

Defined in: [nvdocument.ts:205](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L205)

---

### measureTextJustify

```ts
measureTextJustify: "start" | "center" | "end";
```

Defined in: [nvdocument.ts:202](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L202)

---

### meshThicknessOn2D

```ts
meshThicknessOn2D: number | string;
```

Defined in: [nvdocument.ts:147](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L147)

---

### meshXRay

```ts
meshXRay: number;
```

Defined in: [nvdocument.ts:178](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L178)

---

### mouseEventConfig?

```ts
optional mouseEventConfig: MouseEventConfig;
```

Defined in: [nvdocument.ts:150](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L150)

---

### multiplanarEqualSize

```ts
multiplanarEqualSize: boolean;
```

Defined in: [nvdocument.ts:144](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L144)

---

### multiplanarForceRender

```ts
multiplanarForceRender: boolean;
```

Defined in: [nvdocument.ts:143](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L143)

---

### multiplanarLayout

```ts
multiplanarLayout: MULTIPLANAR_TYPE;
```

Defined in: [nvdocument.ts:183](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L183)

---

### multiplanarPadPixels

```ts
multiplanarPadPixels: number;
```

Defined in: [nvdocument.ts:142](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L142)

---

### multiplanarShowRender

```ts
multiplanarShowRender: SHOW_RENDER;
```

Defined in: [nvdocument.ts:145](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L145)

---

### paqdUniforms

```ts
paqdUniforms: number[];
```

Defined in: [nvdocument.ts:125](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L125)

---

### penSize

```ts
penSize: number;
```

Defined in: [nvdocument.ts:188](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L188)

---

### penType

```ts
penType: PEN_TYPE;
```

Defined in: [nvdocument.ts:169](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L169)

---

### penValue

```ts
penValue: number;
```

Defined in: [nvdocument.ts:168](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L168)

---

### renderOverlayBlend

```ts
renderOverlayBlend: number;
```

Defined in: [nvdocument.ts:184](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L184)

---

### renderSilhouette

```ts
renderSilhouette: number;
```

Defined in: [nvdocument.ts:209](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L209)

---

### rulerColor

```ts
rulerColor: number[];
```

Defined in: [nvdocument.ts:126](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L126)

---

### rulerWidth

```ts
rulerWidth: number;
```

Defined in: [nvdocument.ts:117](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L117)

---

### sagittalNoseLeft

```ts
sagittalNoseLeft: boolean;
```

Defined in: [nvdocument.ts:159](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L159)

---

### scrollRequiresFocus

```ts
scrollRequiresFocus: boolean;
```

Defined in: [nvdocument.ts:200](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L200)

---

### selectionBoxColor

```ts
selectionBoxColor: number[];
```

Defined in: [nvdocument.ts:122](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L122)

---

### selectionBoxIsOutline

```ts
selectionBoxIsOutline: boolean;
```

Defined in: [nvdocument.ts:199](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L199)

---

### selectionBoxLineThickness

```ts
selectionBoxLineThickness: number;
```

Defined in: [nvdocument.ts:198](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L198)

---

### show3Dcrosshair

```ts
show3Dcrosshair: boolean;
```

Defined in: [nvdocument.ts:118](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L118)

---

### showAllOrientationMarkers

```ts
showAllOrientationMarkers: boolean;
```

Defined in: [nvdocument.ts:156](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L156)

---

### showBoundsBorder?

```ts
optional showBoundsBorder: boolean;
```

Defined in: [nvdocument.ts:214](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L214)

---

### showColorbarBorder

```ts
showColorbarBorder: boolean;
```

Defined in: [nvdocument.ts:113](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L113)

---

### showLegend

```ts
showLegend: boolean;
```

Defined in: [nvdocument.ts:180](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L180)

---

### showMeasureUnits

```ts
showMeasureUnits: boolean;
```

Defined in: [nvdocument.ts:201](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L201)

---

### sliceMosaicString

```ts
sliceMosaicString: string;
```

Defined in: [nvdocument.ts:185](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L185)

---

### sliceType

```ts
sliceType: SLICE_TYPE;
```

Defined in: [nvdocument.ts:174](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L174)

---

### textHeight

```ts
textHeight: number;
```

Defined in: [nvdocument.ts:108](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L108)

---

### thumbnail

```ts
thumbnail: string;
```

Defined in: [nvdocument.ts:172](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L172)

---

### tileMargin

```ts
tileMargin: number;
```

Defined in: [nvdocument.ts:141](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L141)

---

### touchEventConfig?

```ts
optional touchEventConfig: TouchEventConfig;
```

Defined in: [nvdocument.ts:151](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L151)

---

### trustCalMinMax

```ts
trustCalMinMax: boolean;
```

Defined in: [nvdocument.ts:128](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L128)

---

### viewModeHotKey

```ts
viewModeHotKey: string;
```

Defined in: [nvdocument.ts:131](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L131)

---

### yoke3Dto2DZoom

```ts
yoke3Dto2DZoom: boolean;
```

Defined in: [nvdocument.ts:152](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L152)

---

### zarrCacheSize

```ts
zarrCacheSize: number;
```

Defined in: [nvdocument.ts:218](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L218)

Chunk cache size for zarr viewing (default 500)

---

### zarrPrefetchRings

```ts
zarrPrefetchRings: number;
```

Defined in: [nvdocument.ts:220](https://github.com/thewtex/niivue/blob/main/packages/niivue/src/nvdocument.ts#L220)

Number of chunk rings to prefetch around the visible region for zarr viewing (0 disables, default 1)
